--- a/wp-content/themes/vintwood/fonts/cws-iconpack/flaticon.css
+++ b/wp-content/themes/vintwood/fonts/cws-iconpack/flaticon.css
@@ -5,11 +5,11 @@
 
 @font-face {
   font-family: "cwsicon";
-  src: url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.eot");
-  src: url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.eot#iefix") format("embedded-opentype"),
-       url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.woff") format("woff"),
-       url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.ttf") format("truetype"),
-       url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.svg#Flaticon") format("svg");
+  src: url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.eot");
+  src: url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.eot#iefix") format("embedded-opentype"),
+       url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.woff") format("woff"),
+       url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.ttf") format("truetype"),
+       url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "cwsicon";
-    src: url("https://the3bemporium/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.svg#Flaticon") format("svg");
+    src: url("https://the3bemporium.com/wp-content/themes/vintwood/fonts/cws-iconpack/Flaticon.svg#Flaticon") format("svg");
   }
 }
 
