--- a/wp-content/themes/vintwood/css/main.css
+++ b/wp-content/themes/vintwood/css/main.css
@@ -1,8 +1,8 @@
 /*-----------------------------------------------------------------------------------
 
 	Template Name: vintwood
-	Template URI: http://themeforest.net/user/CreativeWS/portfolio
-	Author URI: http://creaws.com
+	Template URI: https://themeforest.net/user/CreativeWS/portfolio
+	Author URI: https://creaws.com
 
 -------------------------------------------------------------------------------------
 == COMMON
@@ -8008,7 +8008,7 @@ article.item .post_meta > hr{
 	transition: background-color 0.3s;
 }
 .news .media_part .pic.link_post.not_thumbnail > a:before{
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7b6cd5+0,ab46bc+100 */
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#7b6cd5+0,ab46bc+100 */
 background: #7b6cd5; /* Old browsers */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
 background: -webkit-linear-gradient(#7b6cd5 0%, #ab46bc 100%);
 background: -o-linear-gradient(#7b6cd5 0%, #ab46bc 100%);
@@ -18999,7 +18999,7 @@ div.post_category:before{
 
 /* -- grayscale */
 img.grayscale {
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'https://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	-webkit-filter: grayscale(100%);
 	-webkit-transition: all .6s ease;
 	-webkit-backface-visibility: hidden;
@@ -19009,7 +19009,7 @@ img.grayscale:hover {
 	-webkit-filter: grayscale(0%);
 }
 .img_cont.grayscale img {
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'https://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
 	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
 	-webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
 	-webkit-backface-visibility: hidden; /* Fix for transition flickering */
@@ -19019,7 +19019,7 @@ img.grayscale:hover {
 	-webkit-filter: grayscale(0%);
 }
 .grayscale_bg{
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'https://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
 	-webkit-filter: grayscale(100%);
 	-webkit-transition: all .6s ease;
 	-webkit-backface-visibility: hidden;
